--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyobs-asi"
-version = "0.14.0"
+version = "0.15.0-alpha.2"
 description = "pyobs model for ASI cameras"
 authors = ["Tim-Oliver Husser <thusser@uni-goettingen.de>"]
 license = "MIT"
