--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,7 @@ zwoasi = "^0.1"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 120
+target-version = ['py39']
