--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,14 @@ authors = ["Tim-Oliver Husser <thusser@uni-goettingen.de>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-
-[tool.poetry.dev-dependencies]
 python = ">=3.9,<3.11"
 astropy = "^5.0"
 numpy = "^1.21"
 zwoasi = "^0.1"
+
+[tool.poetry.dev-dependencies]
+black = "^21.12b0"
+pre-commit = "^2.16.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
