--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,13 @@ python = ">=3.9,<3.11"
 astropy = "^5.0"
 numpy = "^1.21"
 zwoasi = "^0.1"
+pyobs-core = "^0.16.1"
 
 [tool.poetry.dev-dependencies]
 black = "^21.12b0"
 pre-commit = "^2.16.0"
+Sphinx = "^4.4.0"
+sphinx-rtd-theme = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
