--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,7 +3,7 @@ version: 2
 build:
   os: ubuntu-20.04
   tools:
-    python: "3.9"
+    python: "3.11"
 
 sphinx:
   configuration: docs/source/conf.py
@@ -12,3 +12,4 @@ python:
   install:
     - method: pip
       path: .
+    - requirements: docs/requirements.txt
